--- a/countrybanned/core/templates/base.html
+++ b/countrybanned/core/templates/base.html
@@ -6,7 +6,7 @@
         <title>Banned Countries</title>
         <!-- App css -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
